<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemEditar"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/editar"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemExcluir"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/excluir"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemConfig"
        android:title="@string/configuracao" />
    <item
        android:id="@+id/menuItemAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/sobre"
        android:visible="true" />
</menu>